--- a/playbook.yaml
+++ b/playbook.yaml
@@ -54,10 +54,13 @@
       service:
         name: haproxy
         state: restarted
+
     - name: Test application  reachability
-      shell: "curl -kv http://localhost:80/apihealth"
+      shell: "cmd_curl=$(curl http://89.42.140.249:80/apihealth) && for i in 1 2 3 4 5 6; do echo $cmd_curl;done"
       register: api_health
+      delegate_to: localhost
       
     - name: Print application  reachability
+      delegate_to: localhost
       debug: 
         var=api_health.stdout_lines
