--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -18,29 +18,45 @@ global
 	ssl-default-bind-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256::RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS
 	ssl-default-bind-options no-sslv3
 
+
 defaults
-	log	global
-	mode	http
-	option	httplog
-	option	dontlognull
+        log     global
+        mode    http
+        option  httplog
+        option  dontlognull
         timeout connect 5000
         timeout client  50000
         timeout server  50000
-	errorfile 400 /etc/haproxy/errors/400.http
-	errorfile 403 /etc/haproxy/errors/403.http
-	errorfile 408 /etc/haproxy/errors/408.http
-	errorfile 500 /etc/haproxy/errors/500.http
-	errorfile 502 /etc/haproxy/errors/502.http
-	errorfile 503 /etc/haproxy/errors/503.http
-	errorfile 504 /etc/haproxy/errors/504.http
+        errorfile 400 /etc/haproxy/errors/400.http
+        errorfile 403 /etc/haproxy/errors/403.http
+        errorfile 408 /etc/haproxy/errors/408.http
+        errorfile 500 /etc/haproxy/errors/500.http
+        errorfile 502 /etc/haproxy/errors/502.http
+        errorfile 503 /etc/haproxy/errors/503.http
+        errorfile 504 /etc/haproxy/errors/504.http
+
 
 frontend web
-    bind *:80
-    default_backend web_servers
+   # bind *:80
+   # default_backend web_servers
+
+        bind *:80
+        mode http
+        default_backend web_servers
+        stats enable
+        stats hide-version
+        stats refresh 10s
+        stats show-node
+        #stats auth adminname:adminpassword
+        #stats uri /stats
 
 backend web_servers
 	mode http
     balance roundrobin
+    #webservers devA 10.0.1.13:80 check
+    #webservers devB 10.0.1.20:80 check
+    #webservers devC 10.0.1.12:80 check
+    
 {% for server in groups['webservers'] %}
     server  {{ server }} {{ hostvars[server]['ansible_default_ipv4']['address'] }}:80 check
 {% endfor %}
