--- a/site.yaml
+++ b/site.yaml
@@ -46,9 +46,52 @@
         state: present
     - name: uploading haproxy configuration file
       template:
-        src: ./haproxy.cfg.j2
+        src: ./haproxy.cfg
         dest: /etc/haproxy/haproxy.cfg
     - name: Reinitializing HAProxy
       service:
         name: haproxy
         state: restarted
+        
+   # - name: Test application  reachability
+   #   shell: "cmd_curl=$(curl http://89.42.140.249:80/) && for i in 1 2 3 4 5 6; do echo $cmd_curl;done"
+   #   register: api_health
+   #   delegate_to: localhost
+      
+   # - name: Print application  reachability
+   #   delegate_to: localhost
+   #   debug: 
+   #     var=api_health.stdout_lines
+        
+             
+     
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
