--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -61,3 +61,10 @@ backend web_servers
     server  {{ server }} {{ hostvars[server]['ansible_default_ipv4']['address'] }}:80 check
 {% endfor %}
 
+
+listen stats
+    bind :32700
+    stats enable
+    stats uri /
+    stats hide-version
+   #stats auth someuser:password
